bpo-41735: Fix thread lock in zlib.Decompress.flush() may go wrong (GH-29587)

* Fix thread lock in zlib.Decompress.flush() may go wrong

Getting `.unconsumed_tail` before acquiring the thread lock may mix up decompress state.
(cherry picked from commit 7edb6270a78c695e4c2ae2432797dc18105374fc)

Co-authored-by: Ma Lin <animalize@users.noreply.github.com>